# multiclique-protocol

./: .env.example  .gitignore  Cargo.toml  LICENCE  README.md  deploy.sh  init.sh
commons/: Cargo.toml
commons/src/: README.md  lib.rs  traits.rs
contracts/core/: Cargo.toml  README.md
contracts/core/src/: errors.rs  events.rs  interface.rs  lib.rs  test.rs  tests.rs
contracts/policies/elio-dao/: Cargo.toml  README.md
contracts/policies/elio-dao/src/: errors.rs  events.rs  interface.rs  lib.rs  test.rs
contracts/policy/: Cargo.toml
contracts/policy/src/: interface.rs  lib.rs
wasm/: elio_dao_policy.wasm  multiclique.wasm  multiclique_core.wasm  multiclique_policy.wasm
