[workspace]
members = [
    "contracts/core",
    "contracts/policies/elio-dao",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "20.0.0-rc2"
commons = { path = "./commons" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true